--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "~0.16.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.2",
     "@types/react-native": "^0.67.6",
     "expo": "^45.0.4",
     "expo-status-bar": "~1.3.0",
@@ -22,6 +23,7 @@
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
     "webpack-dev-server": "^4.9.0"
   },
   "devDependencies": {
