--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
