--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
     "@types/react-native": "^0.67.6",
+    "dotenv": "^16.0.1",
     "expo": "^45.0.4",
+    "expo-file-system": "^14.0.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
+    "joi": "^17.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
