--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.2",
     "@types/react-native": "^0.67.6",
-    "dotenv": "^16.0.1",
     "expo": "^45.0.4",
     "expo-file-system": "^14.0.0",
     "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
-    "joi": "^17.6.0",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "webpack-dev-server": "~3.11.0"
+    "webpack-dev-server": "~3.11.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
