--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^45.0.4",
     "expo-file-system": "^14.0.0",
     "expo-image-picker": "^13.1.1",
+    "expo-location": "^14.2.2",
     "expo-sqlite": "^10.2.0",
     "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
@@ -25,11 +26,12 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-maps": "0.30.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "webpack-dev-server": "~3.11.0",
+    "webpack-dev-server": "^4.9.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
